# pmacct-gauze

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml  imported.h
.cargo/: config.toml
.github/workflows/: ci.yml
crates/pmacct-gauze-bindings/: Cargo.toml  build.rs  imported.h
crates/pmacct-gauze-bindings/src/: lib.rs
crates/pmacct-gauze-bindings/src/convert/: address_family.rs  ipaddr.rs  mod.rs  rd.rs  timeval.rs
crates/pmacct-gauze-bindings/src/print/: attr.rs  bmp_data.rs  community.rs  ipaddr.rs  mod.rs  prefix.rs
crates/pmacct-gauze-bindings/src/utils/: cap_per_af.rs  mod.rs
crates/pmacct-gauze-lib/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  cbindgen.toml.template
crates/pmacct-gauze-lib/src/: c_api.rs  context_cache.rs  coption.rs  cresult.rs  cslice.rs  error.rs  lib.rs  log.rs  macros.rs  opaque.rs  option.rs  slice.rs
crates/pmacct-gauze-lib/src/capi/: bgp.rs  bmp.rs  mod.rs
crates/pmacct-gauze-lib/src/capi/bgp/: mod.rs  notification.rs  open.rs  parse.rs  update.rs
crates/pmacct-gauze-lib/src/capi/bgp/parse/: context.rs  parse.rs
crates/pmacct-gauze-lib/src/capi/bmp/: mod.rs  parse.rs  peer_state.rs  print.rs  stats.rs
crates/pmacct-gauze-lib/src/capi/bmp/parse/: context.rs  mod.rs  parse.rs
crates/pmacct-gauze-lib/src/capi/features/: ip_lookup_table.rs  mod.rs  prefix_tree.rs  rib.rs  vpn_site_discovery.rs
crates/pmacct-gauze-lib/src/capi/features/prefix_tree/: classic.rs  mod.rs  no_parent.rs
crates/pmacct-gauze-lib/src/extensions/: add_path.rs  bgp_attribute.rs  bgp_notification.rs  bmp_message.rs  bmp_statistics.rs  community.rs  context.rs  information_tlv.rs  initiation_information.rs  ipaddr.rs  mod.rs  mp_reach.rs  next_hop.rs  rd.rs
crates/pmacct-gauze-lib/src/result/: bgp_result.rs  bmp_result.rs  cresult.rs  mod.rs
src/: c_api.rs  lib.rs
tools/: install_pmacct_headers.sh
