[package]
name = "pmacct-gauze-bindings"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[build-dependencies]
bindgen = { git = "https://github.com/mxyns/rust-bindgen", branch = "extended-callbacks", version = "0.68.1" }
bindgen-bridge = { git = "https://github.com/mxyns/bindgen-bridge" }
phf_codegen = { version = "0.11.2", optional = true }
quote = "1.0.33"

[dependencies]
phf = "0.11.2"
ipnet = { version = "2.9.0", features = [] }
libc = "0.2.149"
netgauze-bgp-pkt = { path = "../../../netgauze/crates/bgp-pkt" }
netgauze-iana = { path = "../../../netgauze/crates/iana" }
chrono = "0.4.32"

[features]
export-renames = []
static-renames = ["phf_codegen", "export-renames"]
