[package]
name = "pmacct-gauze-lib"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[build-dependencies]
pmacct-gauze-bindings = { path = "../pmacct-gauze-bindings", features = ["static-renames"] }
bindgen-bridge = { git = "https://github.com/mxyns/bindgen-bridge" }

[dependencies]
libc = "0.2.148"
netgauze-parse-utils = "0.1.0"
netgauze-bmp-pkt = "0.1.0"
nom = "7.1.3"
pmacct-gauze-bindings = { path = "../pmacct-gauze-bindings" }

[features]
capi = []