[package]
name = "pmacct-gauze-lib"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[toolchain]
channel = "nightly"

[build-dependencies]
pmacct-gauze-bindings = { path = "../pmacct-gauze-bindings", features = ["static-renames"] }
bindgen-bridge = { git = "https://github.com/mxyns/bindgen-bridge" }

[dependencies]
libc = "0.2.148"
netgauze-parse-utils = { path = "../../../netgauze/crates/parse-utils" }
netgauze-bmp-pkt = { path = "../../../netgauze/crates/bmp-pkt" }
netgauze-bgp-pkt = { path = "../../../netgauze/crates/bgp-pkt" }
netgauze-serde-macros = { path = "../../../netgauze/crates/serde-macros" }
netgauze-iana = { path = "../../../netgauze/crates/iana" }
nom = "7.1.3"
pmacct-gauze-bindings = { path = "../pmacct-gauze-bindings" }
c_str_macro = "1.0.3"
paste = "1.0.14"
byteorder = "1.5.0"
ipnet = "2.8.0"

[features]
capi = []