[package]
name = "pmacct-gauze-lib"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[build-dependencies]
pmacct-gauze-bindings = { path = "../pmacct-gauze-bindings", features = ["static-renames"] }
bindgen-bridge = { git = "https://github.com/mxyns/bindgen-bridge" }

[dependencies]
libc = "0.2.148"
netgauze-parse-utils = { version = "0.5.0" }
netgauze-bmp-pkt = { version = "0.5.0", features = ["codec"] }
netgauze-bgp-pkt = { version = "0.5.0", features = ["codec"] }
netgauze-serde-macros = { version = "0.5.0" }
netgauze-iana = { version = "0.5.0" }
nom = "7.1.3"
pmacct-gauze-bindings = { path = "../pmacct-gauze-bindings" }
c_str_macro = "1.0.3"
paste = "1.0.14"
byteorder = "1.5.0"
ipnet = "2.8.0"

[features]
capi = []